--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "browser-sync": "^2.29.3",
+    "cssmin": "^0.4.3",
     "del": "^4.1.1",
     "rateyo": "^3.0.0-alpha.2"
   }
